feat: 동문회 허용 공지 게시판 구독 생성 및 이벤트 처리 추가
- 게시판 생성 시, 해당 게시판 접근 권한이 있는 인증 사용자만 구독 생성
- 이벤트 기반으로 새로 인증된 사용자의 공지 게시판 구독 생성
- 이벤트 기반으로 졸업생이 된 사용자의 동문회 비허용 게시판 구독 취소
- 새로 인증된 사용자의 동문수첩 기본 프로필 생성 로직을 이벤트 기반으로 변경